edit some stuff

--- a/ScreenCapturing/WPFChatForm.xaml
+++ b/ScreenCapturing/WPFChatForm.xaml
@@ -11,7 +11,7 @@
         <DockPanel Height="35" DockPanel.Dock="Bottom">
             <Image x:Name="sendimg" DockPanel.Dock="Right"  MouseLeftButtonDown="Image_MouseLeftButtonDown" Source="pack://siteoforigin:,,,/Resources/ic_menu_send.png"/>
             <emoji:Picker x:Name="picker" Picked="picker_Picked"/>
-            <emoji:TextBox x:Name="MessageTextBox" KeyDown="MessageTextBox_KeyDown" TextChanged="MessageTextBox_TextChanged" FontSize="16" FontFamily="Times New Roman" TextAlignment="Right" TextWrapping="WrapWithOverflow" MinLines="2" MaxLines="5"/>
+            <emoji:TextBox x:Name="MessageTextBox" KeyDown="MessageTextBox_KeyDown" TextChanged="MessageTextBox_TextChanged" FontSize="16" FontFamily="Times New Roman" TextWrapping="WrapWithOverflow" MinLines="2" MaxLines="5"/>
         </DockPanel>
         <ScrollViewer VerticalScrollBarVisibility="Auto" x:Name="scrollViewer">
             <ScrollViewer.Background>
