no thing really matter

--- a/ScreenCapturing/WPFChatForm.xaml
+++ b/ScreenCapturing/WPFChatForm.xaml
@@ -9,9 +9,9 @@
              d:DesignHeight="446.25" d:DesignWidth="299.375">
     <DockPanel>
         <DockPanel Height="35" DockPanel.Dock="Bottom">
-            <Image x:Name="sendimg" DockPanel.Dock="Right"  MouseLeftButtonDown="Image_MouseLeftButtonDown" Source="pack://siteoforigin:,,,/Resources/ic_menu_send.png"/>
+            <Image x:Name="sendimg" DockPanel.Dock="Right" Source="Resources/ic_menu_send.png"  MouseLeftButtonDown="Image_MouseLeftButtonDown"/>
             <emoji:Picker x:Name="picker" Picked="picker_Picked"/>
-            <emoji:TextBox x:Name="MessageTextBox" KeyDown="MessageTextBox_KeyDown" TextChanged="MessageTextBox_TextChanged" FontSize="16" FontFamily="Times New Roman" TextAlignment="Right" TextWrapping="WrapWithOverflow" MinLines="2" MaxLines="5"/>
+            <emoji:TextBox x:Name="MessageTextBox" KeyDown="MessageTextBox_KeyDown" TextChanged="MessageTextBox_TextChanged" FontSize="16" FontFamily="Times New Roman" TextWrapping="WrapWithOverflow" MinLines="2" MaxLines="5"/>
         </DockPanel>
         <ScrollViewer VerticalScrollBarVisibility="Auto" x:Name="scrollViewer">
             <ScrollViewer.Background>
